scenarios/06-extensions/http-ext-proc-ext-auth/20-ext-proc-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-backend-a-ext-proc-filter-to-coraza-waf
  namespace: gateway-system
spec:
  from:
    - group: cilium.io
      kind: CiliumEnvoyExtProcFilter
      namespace: backend-a
  to:
    - group: ""
      kind: Service
      name: coraza-waf-extproc
